<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- 注册部分 -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etUsernam"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etPassword"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister"/>

    <!-- 登录部分 -->
    <Button
        android:id="@+id/btnFingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnFingerprint"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPasswordLogin"
        android:visibility="gone"/>

</LinearLayout>